--- a/index/知识索引/科普知识/数学科普.md
+++ b/index/知识索引/科普知识/数学科普.md
@@ -10,3 +10,50 @@
    所有结论都可以由有限公理组合出
 6. 书-数学桥
 7. 书-逻辑学导论
+8. 描述极限的语言
+9. 最小知识原则
+10. 信息熵
+11. 逻辑三定律
+12. 新的符号，源于对不同的感知
+13. 蕴含分为实质蕴含和语义蕴含
+14. 归纳的强度
+    1. 从未发生反例
+    2. 强
+    3. 较强
+    4. etc
+15. 集合
+    1. 可以区分的不同 东西 构成 的 整体（东西）
+    2. 同义于性质
+    3. 同义于特征，不过特征一般是基于某个性质再加上补充的性质所构成的集合
+16. 可以区分的不同 
+    这是一个最基本的概念，无法再拆分
+17. 东西 
+    1. 也是基本概念
+    2. 同义于元素 
+18. 构成
+    1. 也是基本概念
+    2. 同义于属于
+19. 三类集合 
+    1. 无穷 
+    2. 有穷 
+    3. 空
+20. 集合上可以定义关系
+    1. 反过来， 用定义的关系和已知集合，可以找到与之有关系的集合
+21. 三种自然界的主要关系
+    1. 互斥-不是一个东西
+    2. 递进-有一定序列，关系具有传递性
+    3. 线性-序关系间存在关系
+22. 逐步淘汰原理 = 计数 
+23. 笛卡尔积 = 遍历
+24. 概率基于全同性原理
+25. 数学期望
+26. 独立性 - 事件同时发生的概率，等于分别发生的乘
+27. 方差 
+28. 协方
+29. 大数定理
+30. 中心极限定理
+31. 矩估计
+32. 极大似然估计
+33. 贝叶斯估计
+34. 区间估计
+35. 卡方统计量
