--- a/index/知识索引/科普知识/物理科普.md
+++ b/index/知识索引/科普知识/物理科普.md
@@ -3,3 +3,23 @@
    https://www.zhihu.com/question/391645572/answer/1810733928
 3. 量子力学科普
    https://www.zhihu.com/question/336274752/answer/2327461984
+4. 书-朗道十卷
+5. 诺特定理
+6. 最小作用量原理
+7. 量子坍缩和熵增加和时间
+8. 隐变量理论 - 贝尔不等式
+9. 时间移动对称定律
+10. 空间对称定律
+11. 空间旋转对称
+12. 基本粒子的不可区分性
+    1.  费米-狄拉克统计
+    2.  玻色子量子统计
+    3.  费米子泡利不相容
+13. 时间和空间之间的坐标轴转动对称性
+    1. 洛伦兹变换
+14. 惯性质量和引力质量的对称性
+15. 广义相对论
+16. 热二
+17. 相对性原理   
+    1. 近似于全同性原理   
+    2. 几乎等于范畴中的对称概念
