--- a/index/知识索引/科普知识/计算机科普.md
+++ b/index/知识索引/科普知识/计算机科普.md
@@ -1,2 +1,7 @@
 1. 书-深入理解计算机系统
 1. 书-算法导论
+1. 如何完整的记录东西
+   1. 数据库是为了模拟一个记录：某一个时刻世界的状态
+   1.   完备性：    
+      1.   人的认知，都是一个一个独立的东西，能感知到不同，就能新增一个东西，这个东西有很多属性，数据库只记录了需要的属性       
+      1.  可以把人认知的每个独立的东西的不同量记录下来，然后把这些东西排列成表，就是数据库库表了
