--- a/index/知识索引/科普知识/心理学科普.md
+++ b/index/知识索引/科普知识/心理学科普.md
@@ -3,3 +3,5 @@
 3. 觉得某个事会有别人做，就能减轻自己对这件事的欲望
 4. 积压情绪会造成问题， 会在爆发时对目标造成过量反馈
 5. 生病时告知其他人，自己欲望控制力下降
+6. 音乐-https://www.zhihu.com/question/455070995/answer/1840037649
+7. 音乐语言-https://www.zhihu.com/question/22713186/answer/2244191810
