--- a/随手一记.md
+++ b/随手一记.md
@@ -34,3 +34,4 @@
 13. 突然闪出的想法-负责传承的阶层需要文武双全，功能越全面的群体越适合作为人类传承的阶层
 14. 操作可以划分为 收集资源和修改资源两个阶段， 这个便对应两阶段提交
 15. 加锁可以类比为现实中的占有一个东西
+16. 像A的东西和像B的东西可以变成像C的东西，如果要完成这点，唯一的一步便是要获取像A的东西和像B的东西， 并在他俩在一起前让他们保持不变， 保持不变的这一步就是加锁
