--- a/随手一记.md
+++ b/随手一记.md
@@ -36,3 +36,4 @@
 15. 加锁可以类比为现实中的占有一个东西
 16. 像A的东西和像B的东西可以变成像C的东西，如果要完成这点，唯一的一步便是要获取像A的东西和像B的东西， 并在他俩在一起前让他们保持不变， 保持不变的这一步就是加锁
 17. 很多自然对象的定义是基于关系的，所以集合论无法描述，范畴论可以描述
+18. todo记录一定多余do， 所以记下todo就能覆盖所有的 done和fail
