--- a/随手一记.md
+++ b/随手一记.md
@@ -37,4 +37,4 @@
 16. 像A的东西和像B的东西可以变成像C的东西，如果要完成这点，唯一的一步便是要获取像A的东西和像B的东西， 并在他俩在一起前让他们保持不变， 保持不变的这一步就是加锁
 17. 很多自然对象的定义是基于关系的，所以集合论无法描述，范畴论可以描述
 18. todo记录一定多余do， 所以记下todo就能覆盖所有的 done和fail
-19. 为什么要事务， 因为需要原子，持久的操作。而一致是为了保证 事务不发生=事务回滚，隔离是为了一致
+19. 为什么要事务， 因为需要原子，持久的操作。而一致是为了保证 事务不发生=事务回滚，隔离是为了一致： 回滚造成和不发生不一致（读已提交），提交造成不一致（行：重复读， 表：幻读）
