--- a/inspiration/随手一记.md
+++ b/inspiration/随手一记.md
@@ -40,3 +40,4 @@
 19. 为什么要事务， 因为需要原子，持久的操作。而一致是为了保证 事务不发生=事务回滚，隔离是为了一致： 回滚造成和不发生不一致（读已提交），提交造成不一致（行：重复读， 表：幻读）
 20. 一个概念相关的信息， 可以被外延定义的拆分为n个概念。 也可以用拆分的概念内涵定义出新的概念。 但人们在定义时习惯的只是使用概念的子集。 比如物理=实验+数学， 实际上使用的只是数学概念的子集
 21. 脑子的结构， 类似于 对信息抽象的张量定义成符号， 然后对符号和符号，符号和张量，张量和张量之间进行索引排版
+22. SCAMPER MECE
