--- a/inspiration/随手一记.md
+++ b/inspiration/随手一记.md
@@ -42,3 +42,43 @@
 21. 脑子的结构， 类似于 对信息抽象的张量定义成符号， 然后对符号和符号，符号和张量，张量和张量之间进行索引排版
 22. SCAMPER MECE
 23. 通信成功失败模型：处理成功；处理失败（重试后可能会成功（实际上会成功；实际上永远不成功；）；重试后也不能成功；）；未响应（实际成功（永远不响应但实际就是成功了，可能会发生后续流程，所以后续流程需要检验请求方的状态）；实际失败；）；  根据这些可能行，通信时需要保证 请求信息的幂等性和重试机制。相应信息的成功和失败类型；
+24. 异步回调模型：
+    1. 回调成功 - 推进
+    2. 回调失败 - 回滚
+    3. 回调超时（一般不需要）
+        1. 直接回滚
+        2. 主动查询
+            1. 结果 - 推进回滚
+            2. 失败
+                1. 报警
+25.同步异步请求需要记录的时间
+同步下游
+1. 下游首次接受时间
+2. 下游首次成功实践
+
+异步下游
+1. 下游首次接受时间
+2. 下游首次回调时间
+3. 下游回调成功时间
+
+同步上游
+1. 上游首次发起时间
+2. 上游首次成功时间/彻底失败时间
+
+异步上游
+1. 上游首次发起时间
+2. 上游首次回调时间
+        1. 上游首次回调成功时间
+
+设计系统时要考虑失败和长时间不推进的解决方案
+打点
+1. 入流量
+    1. 发起埋点（首次，正确/中止，重试）
+    2. 返回埋点
+2. 出流量
+3. 内部逻辑
+    1. 中止埋
+  
+
+26. 
+
