--- a/inspiration/随手一记.md
+++ b/inspiration/随手一记.md
@@ -83,4 +83,4 @@
 26. 一切系统都是读写（寻找一个地点，进行观察or改变）
     1. 绝对空间寻找（以长度这个公共属性为索引去寻找）
     2. 相对空间寻找（通过物的相互作用寻找）
-27. 
+27. Raft， 在未来达成一致 = 行为步骤可以有缺失，但不能有不同， 所以新增的命令， 必须由一个节点承担
