--- a/inspiration/随手一记.md
+++ b/inspiration/随手一记.md
@@ -41,7 +41,7 @@
 20. 一个概念相关的信息， 可以被外延定义的拆分为n个概念。 也可以用拆分的概念内涵定义出新的概念。 但人们在定义时习惯的只是使用概念的子集。 比如物理=实验+数学， 实际上使用的只是数学概念的子集
 21. 脑子的结构， 类似于 对信息抽象的张量定义成符号， 然后对符号和符号，符号和张量，张量和张量之间进行索引排版
 22. SCAMPER MECE
-23. 通信成功失败模型：处理成功；处理失败（重试后可能会成功（实际上会成功；实际上永远不成功；）；重试后也不能成功；）；未响应（实际成功（永远不响应但实际就是成功了，可能会发生后续流程，所以后续流程需要检验请求方的状态）；实际失败；）；  根据这些可能行，通信时需要保证 请求信息的幂等性和重试机制。相应信息的成功和失败类型；
+23. 通信成功失败模型：处理成功；处理失败（重试后可能会成功（实际上会成功；实际上永远不成功；）；重试后也不能成功；）；未响应（实际成功（永远不响应但实际就是成功了，可能会发生后续流程，所以后续流程需要检验请求方的状态）；实际失败；）；  根据这些可能行，通信时需要保证 请求信息的幂等性（同一个请求，完成后就不再处理了）和重试机制。相应信息的成功和失败类型；
 24. 异步回调模型：
     1. 回调成功 - 推进
     2. 回调失败 - 回滚
