--- a/inspiration/随手一记.md
+++ b/inspiration/随手一记.md
@@ -89,3 +89,4 @@
 27. Raft， 在未来达成一致 = 行为步骤可以有缺失，但不能有不同， 所以新增的命令， 必须由一个节点承担
 28. 关于图数据库； 根据 a和R 寻找b， 传统数据库至少需要遍历 R表（ab关系总数）和b表， 图数据库需要遍历a表和aR（a存在的关系数）表。 ar通常小于r， 所以图数据库快
 29. 合舍逻辑符号， 可以表示与或非， 本质是其 具备了二元关系和否定
+30. 有状态接口： 请求处理成功： 检查状态 -> 记录初始化状态/ 修改状态
